syntax = "proto3";

package colors;

message RGBColor {
  int32 r = 1;
  int32 g = 2;
  int32 b = 3;
}

message HSVColor {
  float h = 1;
  float s = 2;
  float v = 3;
}

enum OperationType {
  AVERAGE = 0;
  MAX = 1;
}

message ColorsOperationArgument {
  repeated HSVColor colors = 1;
  OperationType operation = 2;
}

service ColorTransform {
  rpc RGBToHSV (RGBColor) returns (HSVColor) {}
  rpc HSVToRGB (HSVColor) returns (RGBColor) {}
  rpc HSVColorsAggregate(ColorsOperationArgument) returns (HSVColor) {}
}
